grid out for only one pic

--- a/app/views/art_fair_exhibitors/index.html.erb
+++ b/app/views/art_fair_exhibitors/index.html.erb
@@ -16,14 +16,14 @@
       <div class="artist_name">
         <%= simple_format(a_exhib.artist_name) %>
       </div>
-      <div class="flex_middle">
-        <div class="pics">
+      <% if   d_exhib.photo.url.present?  %>
+        <div class="flex_middle">
           <% a_exhib.photos.each do |photo| %>
             <div class="pics_divs" style="background-image: url(<%= cl_image_path(photo.key) %>)">
             </div>
           <% end %>
         </div>
-      </div>
+      <% end %>
       <div class="text">
         <% if params[:locale] == "en" || params[:locale].nil? %>
           <%= simple_format(a_exhib.description_en) %>
