one photo per exhibitor

--- a/app/assets/stylesheets/design_exhibitors/_index_design_exhibitors.scss
+++ b/app/assets/stylesheets/design_exhibitors/_index_design_exhibitors.scss
@@ -45,9 +45,9 @@
   background-color: #f4f4f4;
 }
 
-.pics_divs {
-  width: 300px;
-  object-fit: contain;
+.exhibitor-image {
+  display: flex;
+  justify-content: center;
 }
 
 .middle_coming {
