--- a/app/views/art_fair_exhibitors/index.html.erb
+++ b/app/views/art_fair_exhibitors/index.html.erb
@@ -12,16 +12,12 @@
   </div>
 <% else %>
   <% @art_fair_exhibitors.each do |a_exhib| %>
-    <div class="artist-<%= index %>">
       <div class="artist_name">
-        <%= simple_format(a_exhib.artist_name) %>
+        <%= simple_format(a_exhib.artist_name, class: ("artist-1" if a_exhib == @art_fair_exhibitors.first)) %>
       </div>
-      <% if a_exhib.photo.url.present?  %>
-        <div class="flex_middle">
-          <% a_exhib.photos.each do |photo| %>
-            <div class="pics_divs" style="background-image: url(<%= cl_image_path(photo.key) %>)">
-            </div>
-          <% end %>
+      <% if a_exhib.photo.attached? %>
+        <div class="exhibitor-image">
+          <%= cl_image_tag a_exhib.photo.key, width: 800, crop: :fill %>
         </div>
       <% end %>
       <div class="text">
@@ -32,6 +28,5 @@
         <% end %>
         <%= link_to a_exhib.url, "http://#{a_exhib.url}" %>
       </div>
-    </div>
   <% end %>
 <% end %>
