--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,72 +1,12 @@
 <div data-controller="navbar" id="header">
-  <div id="nav_computer">
-    <nav class="main-nav">
-      <ul>
+      <% if false %>
         <% unless current_page?(root_path) %>
           <li data-navbar-target="back">
             <%= link_to "< BACK", "javascript:history.back()" %>
           </li>
         <% end %>
-        <% if current_page?(root_path) %>
-          <li data-navbar-target="about">
-            <%= link_to t("navbar.about"), "#about_link", data: { action: "click->navbar#link", controller: "scroll-to", scroll_to_offset_value: "0" } %>
-          </li>
-        <% end %>
-        <% if current_page?(root_path) %>
-          <li>
-            <%= link_to t("navbar.partner"), "#partners_link", data: { action: "click->navbar#link", controller: "scroll-to", scroll_to_offset_value: "145" } %>
-          </li>
-        <% end %>
-        <% unless current_page?(design_path) || current_page?(design_programm_path) %>
-          <li data-navbar-target="artfair">
-            <%= link_to 'Bienvenue Art Fair', art_fair_path %>
-          </li>
-        <% end %>
-        <% if request.original_url.include?("art_fair") %>
-          <li style="width: 57.1px"></li>
-        <% end %>
-        <% unless current_page?(art_fair_path) || current_page?(art_fair_programm_path) %>
-          <li data-navbar-target="design">
-            <%= link_to 'Bienvenue Design', design_path %>
-          </li>
-        <% end %>
-        <% if request.original_url.include?("design") %>
-          <li style="width: 57.1px"></li>
-        <% end %>
-        <% if current_page?(root_path) %>
-          <li data-navbar-target="contact">
-            <%= link_to "CONTACT", "#contact_link", data: { action: "click->navbar#link", controller: "scroll-to", scroll_to_offset_value: "300" } %>
-          </li>
-        <% end %>
-        <% if current_page?(root_path) %>
-          <li  data-navbar-target="registration">
-            <%= link_to t("navbar.registration"), new_registration_path, class:"link" %>
-          </li>
-        <% end %>
-      </ul>
-    </nav>
-    <% unless current_page?(root_path) %>
-      <nav class="main-nav">
-        <ul class="navbar_down">
-          <% if request.original_url.include?("art_fair") %>
-            <li>
-              <%= link_to t("navbar.exhibitors"), art_fair_exhibitors_path, class:"link" %>
-            </li>
-            <li>
-              <%= link_to t("navbar.programm"), art_fair_programm_path, class:"link" %>
-            </li>
-          <% else %>
-            <li>
-              <%= link_to t("navbar.exhibitors"), design_exhibitors_path, class:"link" %>
-            </li>
-            <li>
-              <%= link_to t("navbar.programm"), design_programm_path, class:"link" %>
-            </li>
-          <% end %>
-        </ul>
-      </nav>
-    <% end %>
-  </div>
+      <% end %>
+
   <div class="header nav_height" id="nav_tel">
     <ul class="navbar-nav .main-nav <%= "stick_nav" unless current_page? (root_path) %>">
       <li class="align_icon">
