--- a/app/assets/stylesheets/pages/registration.scss
+++ b/app/assets/stylesheets/pages/registration.scss
@@ -46,6 +46,7 @@
 .registration_title {
   font-size: 1.1rem;
   margin: 0;
+  color: white;
 }
 
 .invisible_div {
@@ -60,7 +61,7 @@
   padding: 6px;
   position: sticky;
   top: 0;
-  background-color: #f4f4f4;
+  background-color: #FC46AA;
 }
 
 .form_in_middle {
