--- a/app/views/design_exhibitors/index.html.erb
+++ b/app/views/design_exhibitors/index.html.erb
@@ -1,5 +1,5 @@
   <div class="comp_mode exhibitors_top">
-    <%= link_to "< BACK", "javascript:history.back()" %>
+    <%= link_to "< BACK", "javascript:history.back()", class:"color-w underlin hover" %>
     <h1 class="registration_title"> BIENVENUE DESIGN EXHIBITORS </h1>
     <div class="invisible_div"></div>
   </div>
