--- a/app/views/art_fair_exhibitors/index.html.erb
+++ b/app/views/art_fair_exhibitors/index.html.erb
@@ -1,5 +1,5 @@
 <div class="comp_mode exhibitors_top">
-  <%= link_to "< BACK", "javascript:history.back()" %>
+  <%= link_to "< BACK", "javascript:history.back()",class:"color-w underlin hover" %>
   <h1 class="registration_title"> BIENVENUE ART FAIR EXHIBITORS </h1>
   <div class="invisible_div"></div>
 </div>
