--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="registration_top">
-  <%= link_to "< BACK", "javascript:history.back()" %>
+  <%= link_to "< BACK", "javascript:history.back()",class:"color-w underlin hover" %>
   <h1 class="registration_title"> <%= t("pages.registration.page_title") %> </h1>
   <div class="invisible_div"></div>
 </div>
