--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -5,7 +5,7 @@
 </div>
 <div class="in_the_middle">
 <div class="gif">
-<div style="height: 100%" class="comp_gif">
+<div class="comp_gif">
   <%= form_with model: @registration, method: :post, class: "registration-form" do |reg_form| %>
     <div class="registration-group group_one">
       <%= reg_form.label t("pages.registration.title"), class: "underline" %>
