--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -36,6 +36,9 @@
             <li>
               <%= link_to t("navbar.registration"), new_registration_path, class:"link color-b" %>
             </li>
+            <li>
+              <a href="https://www.parislalouisiane.com/"> <%= image_tag("Bienvenue_CS_button.gif", class:"crosby" )%></a>
+            </li>
           </ul>
         </div>
     </ul>
