one class removed on about

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,7 +39,7 @@
     <% end %>
   </div>
   <main class="skew-scroll"  id="about_link">
-    <section class="all_text">
+    <section class="all_text height_auto">
       <div class="section_one">
         <% if params[:locale] == "en" || params[:locale].nil? %>
           <div class="dates-one">
